--- a/scss/abstract/_mixins.scss
+++ b/scss/abstract/_mixins.scss
@@ -32,13 +32,24 @@ $breakpoint argument choices:
 */
 @mixin respond ($breakpoint) {
     @if $breakpoint == phone {
-        @media (max-width: 37.5em){@content};
+        @media (max-device-width: 37.5em){@content};
     }
     @if $breakpoint == tab-port {
-        @media (max-width: 56.25em){@content};
+        @media (max-device-width: 56.25em){@content};
     }
     @if $breakpoint == tab-land {
-        @media(max-width: 75em){@content};
+        @media(max-device-width: 75em){@content};
     }
 }
 
+@mixin resize ($breakpoint) {
+    @if $breakpoint == skinny {
+        @media (max-width: 37.5em){@content};
+    }
+    @if $breakpoint == mid {
+        @media (max-width: 56.25em){@content};
+    }
+    @if $breakpoint == wide {
+        @media(max-width: 75em){@content};
+    }
+}
